--- a/assets/css/profile-jumper.css
+++ b/assets/css/profile-jumper.css
@@ -1,7 +1,10 @@
+.navbar-brand img {
+  border-radius: 2px;
+}
+
 .profile-jumper-header {
   padding-top: 10px;
 }
-
 
 .profile-jumper-branding-logo img {
   border-radius: 4px;
@@ -13,16 +16,59 @@
   color: #367532;
 }
 
-
-.chrome-button {
-  background-color: DodgerBlue;
-  border: none;
-  color: white;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
+.feature-card .card-header {
+  background-color: #495057;
 }
 
-.chrome-button:hover {
-  background-color: RoyalBlue;
+.feature-card .card-img-top {
+     width: 110px;
+     height: 96px;
+}
+
+h1 {
+  padding-top: 10px;
+}
+
+
+/* footer */
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#footer {
+  background: #367532 !important;
+}
+
+#footer ul li{
+  padding: 20px;
+}
+
+
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+}
+
+#footer a:hover {
+    color: #ffffff;
+    text-decoration: underline !important;
+}
+
+/* credits */
+
+.credits-card .card-header {
+  background-color: #495057;
+  height: 145px;
+}
+
+.credits-card .card-img-top {
+     width: 125px;
+     height: 125px;
 }
